# trainc

./: CMakeLists.txt  README.md  main.c
c3/: README.md  butterfly.c  color.c  main.c  typing.c
c4/: README.md  animals.c  lottery.c  main4.c  pointer.c  res.md  scale.c  time.c  union-lottery.c
c4-2/: README.md  f1.c  f2.c
c4-3/: p3.c
c5/: README.md  arg.c  array.c  calccet.c  cet6.txt  cet6_words.txt  main.c  main5.c  mem.c  memlib.c  memlib.h  memword.c  palindrome.c  pointer.c  sort.c  str.c  types.c
c6/: README.md  array1.c  array2.c  array3.c  array4.c  array5.c  declare.c  fp1.c  macro.c  macroout.c  numtypes.c  op0.c  op1.c  op2.c  str1.c  str2.c  types.c
daily/: sort.c
draft/: README.md  f3.c  f4.c  p2.c  p4.c  palindrome.c  palindrome2.c  palindrome3.c
essential/: README.md  binhex.c  bsearch.c  bubblesort.c  calc_e.c  case.c  daffodils.c  fibs.c  leap.c  minmax.c  palindrome.c  pi.c  prime.c  revert.c  strcalc.c  strlen.c  strrevert.c  strsort.c
