cmake_minimum_required(VERSION 3.12)
project(trainc C)

set(CMAKE_C_STANDARD 11)

#add_executable(main c3/main.c)
#add_executable(color c3/color.c)
#add_executable(color256 c3/color256.c)
#add_executable(butterfly c3/butterfly.c)
#add_executable(typing c3/typing.c)

add_executable(animals c4/animals.c)
#add_executable(lottery c4/lottery.c)
#add_executable(time c4/time.c)
#add_executable(pointer c4/pointer.c)
#add_executable(palindrome2 c4-3/palindrome2.c)
#add_executable(palindrome3 c4-3/palindrome3.c)
#add_executable(scale c4/scale.c)
#add_executable(main4 c4/main4.c)

add_executable(main5 c5/main.c)
add_executable(str5 c5/str.c)
add_executable(palindrome5 c5/palindrome.c)
add_executable(array5 c5/array.c)
add_executable(mem5 c5/mem.c)
add_executable(sort5 c5/sort.c)
add_executable(memword5 c5/memword.c)
add_executable(calccet c5/calccet.c)
add_executable(types5 c5/types.c)

