cmake_minimum_required(VERSION 3.12)
project(trainc C)

set(CMAKE_C_STANDARD 11)

#add_executable(main c3/main.c)
#add_executable(color c3/color.c)
#add_executable(color256 c3/color256.c)
#add_executable(butterfly c3/butterfly.c)
#add_executable(typing c3/typing.c)

#add_executable(animals c4/animals.c)
#add_executable(lottery c4/lottery.c)
#add_executable(time c4/time.c)
#add_executable(pointer c4/pointer.c)
#add_executable(palindrome2 c4-3/palindrome2.c)
#add_executable(palindrome3 c4-3/palindrome3.c)
#add_executable(scale c4/scale.c)
#add_executable(main4 c4/main4.c)

#add_executable(main5 c5/main.c)
#add_executable(str5 c5/str.c)
#add_executable(palindrome5 c5/palindrome.c)
#add_executable(array5 c5/array.c)
#add_executable(mem5 c5/mem.c)
#add_executable(sort5 c5/sort.c)
#add_executable(memword5 c5/memword.c)
#add_executable(calccet c5/calccet.c)
#add_executable(types5 c5/types.c)
#add_executable(main6 main.c)
add_executable(main6 main.c)

add_executable(macro c6/macro.c)
add_executable(numtypes c6/numtypes.c)
add_executable(op0 c6/op0.c)
add_executable(op1 c6/op1.c)
add_executable(op2 c6/op2.c)
add_executable(array1 c6/array1.c)
add_executable(array2 c6/array2.c)
add_executable(array3 c6/array3.c)
add_executable(array4 c6/array4.c)
add_executable(array5 c6/array5.c)
add_executable(str1 c6/str1.c)
add_executable(str2 c6/str2.c)
add_executable(fp1 c6/fp1.c)
add_executable(declare c6/declare.c)

add_executable(prime essential/prime.c)
add_executable(leap essential/leap.c)
add_executable(binhex essential/binhex.c)
add_executable(daffodils essential/daffodils.c)
add_executable(bubblesort essential/bubblesort.c)
add_executable(minmax essential/minmax.c)
add_executable(bsearch essential/bsearch.c)
add_executable(revert essential/revert.c)
add_executable(strcalc essential/strcalc.c)
add_executable(strlen essential/strlen.c)
add_executable(strsort essential/strsort.c)
add_executable(palindrome2 essential/palindrome.c)
add_executable(case essential/case.c)
add_executable(strrevert essential/strrevert.c)
add_executable(fibs essential/fibs.c)
add_executable(pi essential/pi.c)
add_executable(calc_e essential/calc_e.c)


